Update fork to personalize site

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,8 +1,8 @@
 - title: About
-  url: /about.html
+  url: /about.md
 
 - title: Source
-  url: https://github.com/patdryburgh/hitchens
+  url: https://github.com/altuser6a/book_club
 
 - title: Designer
   url: http://patdryburgh.com
