--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -4,5 +4,8 @@
 - title: Source
   url: https://github.com/altuser6a/book_club
 
+- title: Code of Conduct
+  url: /CODE_OF_CONDUCT.html
+
 - title: Designer
   url: http://patdryburgh.com
