Fix site and readme

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,7 +5,7 @@
   url: /calendar.html
 
 - title: Submit
-  url: https://github.com/altuser6a/book_club/_RFCOMS/README.md
+  url: https://github.com/altuser6a/book_club/tree/master/_RFCOMS
 
 - title: Conduct
   url: /code-of-conduct.html
