--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,6 +1,7 @@
 source "https://rubygems.org"
 
-gem "jekyll"
+# gem "jekyll"
+gem "github-pages", "~> 232", group: :jekyll_plugins
 gem "jekyll-gist"
 gem "jekyll-paginate"
 gem "jekyll-seo-tag"
