--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,8 +11,8 @@ title:            Book Club
 tagline:          'A site for our bookclub!'
 description:      'A site for our bookclub'
 domain:           altuser6a.github.io  
-url:              https://altuser6a.github.io
-baseurl:          /book_club/docs/
+url:              https://altuser6a.github.io/book_club
+baseurl:          /docs/
 
 author:
   name:           'altuser6a'
