--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,7 +9,7 @@ relative_permalinks: false
 # Setup
 title:            Book Club
 tagline:          'A site for our bookclub!'
-description:      'A site for our bookclub'
+description:      'A site for our bookclub!'
 domain:           altuser6a.github.io  
 url:              https://altuser6a.github.io/book_club
 baseurl:          /docs/
