--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -12,7 +12,7 @@ tagline:          'A site for our bookclub!'
 description:      'A site for our bookclub!'
 domain:           altuser6a.github.io  
 url:              https://altuser6a.github.io/book_club
-baseurl:          /docs/
+baseurl:          /
 
 author:
   name:           'altuser6a'
