--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,7 +11,7 @@ title:            Book Club
 tagline:          'A site for our bookclub!'
 description:      'A site for our bookclub!'
 domain:           altuser6a.github.io  
-url:              https://altuser6a.github.io/book_club/
+url:              https://altuser6a.github.io
 baseurl:          /
 
 author:
