--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,8 +3,7 @@ markdown:         kramdown
 highlighter:      pygments
 
 # Permalinks
-permalink:        pretty
-relative_permalinks: true
+# permalink:        pretty
 
 # Setup
 title:            Book Club
